# findora-terminal

./: .env  Cargo.toml
src/: main.rs
src/reader/: mod.rs  rc522.rs  sim.rs
src/rfid/: mod.rs  rc522.rs  sim.rs
