[package]
name = "findora-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v5"] }

# Linux (Pi) hardware reader
rppal = { version = "0.22", optional = true }
rppal_mfrc522 = { version = "0.4.1", optional = true }

[features]
hw = ["rppal", "rppal_mfrc522"]
